--- a/ui/src/app/common.scss
+++ b/ui/src/app/common.scss
@@ -15,11 +15,11 @@
 
 :host-context(.bootstrap-dark) {
 
-  .btn:hover:not(.btn-primary) {
+  .btn:hover:not(.btn-primary):not(.btn-secondary) {
     background-color: rgb(90, 90, 90);
   }
 
-  .btn:active:not(.btn-primary) {
+  .btn:active:not(.btn-primary):not(.btn-secondary) {
     background-color: rgb(40, 40, 40);
   }
 
@@ -30,11 +30,11 @@
 
 :host-context(.bootstrap) {
 
-  .btn:hover:not(.btn-primary) {
+  .btn:hover:not(.btn-primary):not(.btn-secondary) {
     background-color: rgb(200, 200, 200);
   }
 
-  .btn:active:not(.btn-primary) {
+  .btn:active:not(.btn-primary):not(.btn-secondary) {
     background-color: rgb(160, 160, 160);
   }
 
