--- a/ui/src/app/session-view/session-view.component.scss
+++ b/ui/src/app/session-view/session-view.component.scss
@@ -4,17 +4,10 @@
 
 .content-container {
   overflow: hidden;
-  display: flex;
-  position: relative;
-  flex-direction: column;
   height: 100%;
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.editor-container {
-  display: flex;
-  flex-direction: column;
+  padding-left: 60px;
+  padding-right: 60px;
+  max-width: 100%;
 }
 
 .language-dropdown {
@@ -38,6 +31,8 @@
 
 .handle-line {
   height: 20px;
+  margin-left: 1px;
+  margin-right: 1px;
 }
 
 :host-context(.bootstrap-dark) {
@@ -53,7 +48,8 @@
 }
 
 .bottom-bar {
-  height: 300px;
+  height: inherit;
+  width: 100%;
 }
 
 .bottom-editors-container {
