minor CSS corrections

--- a/ui/src/app/home/home.component.scss
+++ b/ui/src/app/home/home.component.scss
@@ -8,6 +8,8 @@
 
   .top-bar-container {
     background-color: $body-bg;
+    padding-left: 45px;
+    padding-right: 45px;
   }
 
   .content-container {
