--- a/ui/src/app/cookies-view/cookies-view.component.html
+++ b/ui/src/app/cookies-view/cookies-view.component.html
@@ -1,80 +1,82 @@
-<app-top-bar></app-top-bar>
+<div style="padding-left: 45px; padding-right: 45px;">
+  <app-top-bar></app-top-bar>
+</div>
 <hr class="header-separator">
 <h1>Cookie policy</h1>
 <p>This cookie policy (“Policy”) describes what cookies are and how and they&#039;re being used by the <a
-        target="_blank" rel="nofollow" href="https://cocoder.org">cocoder.org</a> website (“Website” or “Service”) and
-    any of its related products and services (collectively, “Services”). This Policy is a legally binding agreement
-    between you (“User”, “you” or “your”) and this Website operator (“Operator”, “we”, “us” or “our”). If you are
-    entering into this agreement on behalf of a business or other legal entity, you represent that you have the
-    authority to bind such entity to this agreement, in which case the terms “User”, “you” or “your” shall refer to such
-    entity. If you do not have such authority, or if you do not agree with the terms of this agreement, you must not
-    accept this agreement and may not access and use the Website and Services. You should read this Policy so you can
-    understand the types of cookies we use, the information we collect using cookies and how that information is used.
-    It also describes the choices available to you regarding accepting or declining the use of cookies. For further
-    information on how we use, store and keep your personal data secure, see our <a target="_blank" rel="nofollow"
-        routerLink="/privacy">privacy policy</a>.</p>
+    target="_blank" rel="nofollow" href="https://cocoder.org">cocoder.org</a> website (“Website” or “Service”) and
+  any of its related products and services (collectively, “Services”). This Policy is a legally binding agreement
+  between you (“User”, “you” or “your”) and this Website operator (“Operator”, “we”, “us” or “our”). If you are
+  entering into this agreement on behalf of a business or other legal entity, you represent that you have the
+  authority to bind such entity to this agreement, in which case the terms “User”, “you” or “your” shall refer to such
+  entity. If you do not have such authority, or if you do not agree with the terms of this agreement, you must not
+  accept this agreement and may not access and use the Website and Services. You should read this Policy so you can
+  understand the types of cookies we use, the information we collect using cookies and how that information is used.
+  It also describes the choices available to you regarding accepting or declining the use of cookies. For further
+  information on how we use, store and keep your personal data secure, see our <a target="_blank" rel="nofollow"
+    routerLink="/privacy">privacy policy</a>.</p>
 <h2>What are cookies?</h2>
 <p>Cookies are small pieces of data stored in text files that are saved on your computer or other devices when websites
-    are loaded in a browser. They are widely used to remember you and your preferences, either for a single visit
-    (through a &quot;session cookie&quot;) or for multiple repeat visits (using a &quot;persistent cookie&quot;).</p>
+  are loaded in a browser. They are widely used to remember you and your preferences, either for a single visit
+  (through a &quot;session cookie&quot;) or for multiple repeat visits (using a &quot;persistent cookie&quot;).</p>
 <p>Session cookies are temporary cookies that are used during the course of your visit to the Website, and they expire
-    when you close the web browser.</p>
+  when you close the web browser.</p>
 <p>Persistent cookies are used to remember your preferences within our Website and remain on your desktop or mobile
-    device even after you close your browser or restart your computer. They ensure a consistent and efficient experience
-    for you while visiting the Website and Services.</p>
+  device even after you close your browser or restart your computer. They ensure a consistent and efficient experience
+  for you while visiting the Website and Services.</p>
 <p>Cookies may be set by the Website (&quot;first-party cookies&quot;), or by third parties, such as those who serve
-    content or provide advertising or analytics services on the Website (&quot;third party cookies&quot;). These third
-    parties can recognize you when you visit our website and also when you visit certain other websites. You may learn
-    more about cookies and how they work in this <a target="_blank" rel="nofollow" routerLink="/"
-        fragment="contact">https://cocoder.org/#contact</a>.</p>
+  content or provide advertising or analytics services on the Website (&quot;third party cookies&quot;). These third
+  parties can recognize you when you visit our website and also when you visit certain other websites. You may learn
+  more about cookies and how they work in this <a target="_blank" rel="nofollow" routerLink="/"
+    fragment="contact">https://cocoder.org/#contact</a>.</p>
 <h2>What type of cookies do we use?</h2>
 <h3>Necessary cookies</h3>
 <p>Necessary cookies allow us to offer you the best possible experience when accessing and navigating through our
-    Website and using its features. For example, these cookies let us recognize that you have created an account and
-    have logged into that account to access the content.</p>
+  Website and using its features. For example, these cookies let us recognize that you have created an account and
+  have logged into that account to access the content.</p>
 <h3>Functionality cookies</h3>
 <p>Functionality cookies let us operate the Website and Services in accordance with the choices you make. For example,
-    we will recognize your username and remember how you customized the Website and Services during future visits.</p>
+  we will recognize your username and remember how you customized the Website and Services during future visits.</p>
 <h3>Analytical cookies</h3>
 <p>These cookies enable us and third party services to collect aggregated data for statistical purposes on how our
-    visitors use the Website. These cookies do not contain personal information such as names and email addresses and
-    are used to help us improve your user experience of the Website.</p>
+  visitors use the Website. These cookies do not contain personal information such as names and email addresses and
+  are used to help us improve your user experience of the Website.</p>
 <h3>Advertising cookies</h3>
 <p>Advertising cookies allow us and third parties serve relevant ads to you more effectively and help us collect
-    aggregated audit data, research, and performance reporting for advertisers. They also enable us to understand and
-    improve the delivery of ads to you and know when certain ads have been shown to you.</p>
+  aggregated audit data, research, and performance reporting for advertisers. They also enable us to understand and
+  improve the delivery of ads to you and know when certain ads have been shown to you.</p>
 <p>Your web browser may request advertisements directly from ad network servers, these networks can view, edit, or set
-    their own cookies, just as if you had requested a web page from their website.</p>
+  their own cookies, just as if you had requested a web page from their website.</p>
 <p>Although we do not use cookies to create a profile of your browsing behavior on third party websites, we do use
-    aggregate data from third parties to show you relevant, interest-based advertising. We do not provide any personal
-    information that we collect to advertisers.</p>
+  aggregate data from third parties to show you relevant, interest-based advertising. We do not provide any personal
+  information that we collect to advertisers.</p>
 <h2>Do we use web beacons or tracking pixels?</h2>
 <p>Our emails may contain a &quot;web beacon&quot; (or &quot;tracking pixel&quot;) to tell us whether our emails are
-    opened and verify any clicks through to links or advertisements within the email.</p>
+  opened and verify any clicks through to links or advertisements within the email.</p>
 <p>We may use this information for purposes including determining which of our emails are more interesting to users and
-    to query whether users who do not open our emails wish to continue receiving them.</p>
+  to query whether users who do not open our emails wish to continue receiving them.</p>
 <p>The pixel will be deleted when you delete the email. If you do not wish the pixel to be downloaded to your device,
-    you should read the email in plain text view or with images disabled.</p>
+  you should read the email in plain text view or with images disabled.</p>
 <h2>What are your cookie options?</h2>
 <p>If you don’t like the idea of cookies or certain types of cookies, you can change your browser’s settings to delete
-    cookies that have already been set and to not accept new cookies. Visit <a target="_blank"
-        href="https://www.internetcookies.com" rel="noopener">internetcookies.com</a> to learn more about how to do
-    this.</p>
+  cookies that have already been set and to not accept new cookies. Visit <a target="_blank"
+    href="https://www.internetcookies.com" rel="noopener">internetcookies.com</a> to learn more about how to do
+  this.</p>
 <p>Please note, however, that if you delete cookies or do not accept them, you might not be able to use all of the
-    features the Website and Services offer.</p>
+  features the Website and Services offer.</p>
 <h2>Changes and amendments</h2>
 <p>We reserve the right to modify this Policy or its terms related to the Website and Services at any time at our
-    discretion. When we do, we will revise the updated date at the bottom of this page. We may also provide notice to
-    you in other ways at our discretion, such as through the contact information you have provided.</p>
+  discretion. When we do, we will revise the updated date at the bottom of this page. We may also provide notice to
+  you in other ways at our discretion, such as through the contact information you have provided.</p>
 <p>An updated version of this Policy will be effective immediately upon the posting of the revised Policy unless
-    otherwise specified. Your continued use of the Website and Services after the effective date of the revised Policy
-    (or such other act specified at that time) will constitute your consent to those changes.</p>
+  otherwise specified. Your continued use of the Website and Services after the effective date of the revised Policy
+  (or such other act specified at that time) will constitute your consent to those changes.</p>
 <h2>Acceptance of this policy</h2>
 <p>You acknowledge that you have read this Policy and agree to all its terms and conditions. By accessing and using the
-    Website and Services you agree to be bound by this Policy. If you do not agree to abide by the terms of this Policy,
-    you are not authorized to access or use the Website and Services.</p>
+  Website and Services you agree to be bound by this Policy. If you do not agree to abide by the terms of this Policy,
+  you are not authorized to access or use the Website and Services.</p>
 <h2>Contacting us</h2>
 <p>If you have any questions, concerns, or complaints regarding this Policy or the use of cookies, we encourage you to
-    contact us using the details below:</p>
+  contact us using the details below:</p>
 <p><a target="_blank" rel="nofollow" href="https://cocoder.org">https://cocoder.org</a></p>
 <p>This document was last updated on March 8, 2022</p>
