--- a/ui/src/app/session-view/session-view.component.html
+++ b/ui/src/app/session-view/session-view.component.html
@@ -3,7 +3,7 @@
   <div class="container content-container" (window:mouseup)="stopDragging()" (mousemove)="keepDragging($event)"
     (window:resize)="onResize()" #contentContainer>
     <div class="row" #topBarRow>
-      <div class="column">
+      <div class="column" style="width: 100%">
         <app-top-bar>
           <div ngbDropdown class="d-inline-block language-dropdown" title="Select language">
             <button class="btn btn-outline-primary" ngbDropdownToggle>{{selectedLanguage}}</button>
