added animations for expansion and collapsing of the bottom bar

--- a/ui/src/app/session-view/session-view.component.html
+++ b/ui/src/app/session-view/session-view.component.html
@@ -42,7 +42,9 @@
         </app-top-bar>
       </div>
     </div>
-    <div class="row" #editorRow>
+    <div
+      [@expandCollapse]="{ value: this.bottomBarCollapsed ? 'expanded' : 'collapsed', params: { expandedHeight: this.fullHeight - 50, collapsedHeight: this.editorHeight }}"
+      class="row" #editorRow (resized)="editorRowResized()">
       <div class="column" style="width: 100%; height: inherit;" [style.padding-bottom]="showBottomBar ? '0px' : '30px'">
         <app-monaco-editor (invalidSession)="sessionInvalid=true" (languageUpdated)="updateLanguage($event)"
           [hintsEnabled]="hintsEnabled" style="height: 100%;" [mode]="EditorMode.Code">
@@ -94,7 +96,7 @@
                 </div>
               </div>
             </div>
-            <div class="row" style="height: 100%; margin: 0px;" [hidden]="bottomBarCollapsed">
+            <div class="row" style="height: 100%; margin: 0px;">
               <div class="column" class="bottom-editor-container bottom-editor-container-left">
                 <app-monaco-editor class="bottom-editor" [hintsEnabled]="false" [mode]="EditorMode.Stdin">
                 </app-monaco-editor>
