fixing typo on STDIN button

--- a/ui/src/app/session-view/session-view.component.html
+++ b/ui/src/app/session-view/session-view.component.html
@@ -69,7 +69,7 @@
                   </div>
                 </ng-template>
                 <div class="btn-group" style="vertical-align: top;" [hidden]="bottomBarCollapsed">
-                  <app-highlightable-button [isActive]="true">STDOUT</app-highlightable-button>
+                  <app-highlightable-button [isActive]="true">STDIN</app-highlightable-button>
                 </div>
               </div>
               <div class="column" style="width: 50%;" [hidden]="bottomBarCollapsed">
