--- a/ui/src/app/highlightable-button/highlightable-button.component.scss
+++ b/ui/src/app/highlightable-button/highlightable-button.component.scss
@@ -3,13 +3,15 @@
   position: relative;
   width: 100px;
   height: 40px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .highlight-dot {
   position: absolute;
   vertical-align: middle;
   top: 16px;
-  right: 10px;
+  right: 0.75rem;
   height: 6px;
   width: 6px;
   background-color: rgb(222, 215, 93);
